fixed issue with collapsable peeking

--- a/styles.css
+++ b/styles.css
@@ -245,7 +245,6 @@ button:hover {
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     display: inline-block;
-    padding:10px;
 }
 .DropDownHeader:after {
     content: image-set("plus.png"); /* Unicode character for "plus" sign (+) */
